apply plugin: "java"

repositories.mavenCentral()
dependencies.annotationProcessor rootProject

// Force java 1.8
compileJava {
    targetCompatibility = JavaVersion.VERSION_1_8
    sourceCompatibility = JavaVersion.VERSION_25
    options.encoding = "UTF-8"
    options.release = 8
    
    // Needed to modify compiler options
    options.fork = true
    options.forkOptions.jvmArgs += [
        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
    ] 
}

sourceSets.main.java.srcDirs = ["src"]

sourceSets.main.java.exclude(
    //'Java17FeaturesExample.java',
    //'Java21FeaturesExample.java',
    'Java22FeaturesExample.java',
    'Java23FeaturesExample.java',
    'Java25FeaturesExample.java'
)

ext.mainClassName = "Main"
jar.manifest.attributes["Main-Class"] = project.mainClassName

task run(dependsOn: classes, type: JavaExec) {
    mainClass = project.mainClassName
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
    workingDir = buildDir
}
